--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         <link rel="icon" href="clock.png">
         <title>Hexclock</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
         <link href="main.css" rel="stylesheet" type="text/css" media="screen" />
     </head>
     <body>
-        <div id="container">
-            <h1 id="clock">time</h1>
+        <div>
+            <h1 id="clock"></h1>
         </div>
+        
         <script src="main.js"></script>
     </body>
 </html>
