Revision - utilized semantic HTML; updated css and js

--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
         <link rel="icon" href="clock.png">
         <title>Hexclock</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
         <link href="main.css" rel="stylesheet" type="text/css" media="screen" />
     </head>
     <body>
-        <div>
-            <h1 id="clock"></h1>
-        </div>
+        <main>
+            <section id="panel">
+                #
+                <div id="hr" class="digit"></div>
+                :
+                <div id="min" class="digit"></div>
+                :
+                <div id="sec" class="digit"></div>
+            </section>
+        </main>
         
         <script src="main.js"></script>
     </body>
