Added footer to link to GitHub

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="clock.png">
         <title>Hexclock</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
         <link href="main.css" rel="stylesheet" type="text/css" media="screen" />
     </head>
@@ -20,6 +21,14 @@
                 <div id="sec" class="digit"></div>
             </section>
         </main>
+        <footer>
+            <a href="https://github.com/xlisachan/javascript_hexclock">
+                <div class="github-link">
+                    <i class="fab fa-github"></i>
+                    <div class="username">xlisachan</div>
+                </div>
+            </a>
+        </footer>
         
         <script src="main.js"></script>
     </body>
