Updated html and stylesheet

--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
     <body>
         <main>
             <section id="panel">
-                #
-                <div id="hr" class="digit"></div>
-                :
-                <div id="min" class="digit"></div>
-                :
-                <div id="sec" class="digit"></div>
+                <div class="hexclock">
+                    #
+                    <span id="hr" class="digit"></span>
+                    :
+                    <span id="min" class="digit"></span>
+                    :
+                    <span id="sec" class="digit"></span>
+                </div>
+            </section>
+        
+            <section>
+                <a href="https://github.com/xlisachan/javascript_hexclock">
+                    <div class="github-link">
+                        <i class="fab fa-github"></i>
+                        <div class="username">xlisachan</div>
+                    </div>
+                </a>
             </section>
         </main>
-        <footer>
-            <a href="https://github.com/xlisachan/javascript_hexclock">
-                <div class="github-link">
-                    <i class="fab fa-github"></i>
-                    <div class="username">xlisachan</div>
-                </div>
-            </a>
-        </footer>
         
         <script src="main.js"></script>
     </body>
