--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="info">
-                            <h1>Hexclock</h1>
+                            <h1>Hex Clock</h1>
                             <p>A color-changing clock that displays the current time and hexadecimal color.</p>
                         </div>
                     </div>
